# z-engine

./: .gitignore  README.md  TODO.md  WEEKEND_ROADMAP.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  lint_output.txt  package.json  test_cp.js  tsconfig.web.json
src/engine/: constants.ts  index.ts  package.json  tsconfig.json
src/engine/commands/: InterpreterUtils.ts  registry.ts
src/engine/core/: EngineBootstrapper.ts  MovementProcessor.ts  ServiceLocator.ts  SystemManager.ts  ZEngine.ts  ZEventBus.ts  ZLogger.ts  ZManager.ts  ZScene.ts  ZSystem.ts  index.ts
src/engine/interfaces/: IPhysicsSystem.ts
src/engine/managers/: AudioManager.ts  EventManager.ts  GameStateManager.ts  HistoryManager.ts  InputManager.ts  PluginManager.ts  SaveManager.ts  SceneManager.ts  TextureManager.ts  TilesetManager.ts  ToolManager.ts  index.ts
src/engine/nodes/: index.ts  nodeCompiler.ts  nodeDecompiler.ts  nodeRegistry.ts
src/engine/objects/: Game_Actor.ts  Game_Actors.ts  Game_Party.ts
src/engine/scenes/: SceneBoot.ts  SceneIntro.ts  SceneItem.ts  SceneMap.ts  SceneMenu.ts  SceneTitle.ts  Scene_Boot.ts  Scene_Map.ts  Scene_Title.ts  index.ts
src/engine/sprites/: CharacterSprite.ts
src/engine/systems/: EntityRenderSystem.ts  ErrorSystem.ts  index.ts  (+10 more)
src/main/: BuildService.ts  index.ts
src/preload/: index.d.ts  index.ts
src/ui/: index.html
templates/game-tauri/: index.html  package.json  styles.css  vite.config.js
templates/game-tauri/src-tauri/: Cargo.toml  tauri.conf.json
templates/game-tauri/src-tauri/src/: main.rs
(+208 files in other folders)
